--- a/Restaurant day 2 (src)/CFR.html
+++ b/Restaurant day 2 (src)/CFR.html
@@ -32,7 +32,7 @@ step 1. Gather all ingredients
 step 2. Beat egg and water together in small bowl. Melt butter in a large skillet or wok over medium-low heat; add egg and cook without stirring, 1 to 2 minutes. Remove egg from skillet and cut into shreds; set aside.
 step 3. Heat oil in the same skillet. Add onion; cook and stir until soft, about 3 minutes. Stir in rice, chicken, soy sauce, and pepper. Cook and stir for about 5 minutes; stir in shredded egg. Serve hot.
 </pre>
-<a href="E:\HTML Topics\Daily task html\Restuarent(day 2).html">Home/Go Back</a>
+<a href="../Restuarent(day 2).html">Home/Go Back</a>
 </p>
 </body>
 </html>
