--- a/Restaurant day 2 (src)/Veg Man.html
+++ b/Restaurant day 2 (src)/Veg Man.html
@@ -28,7 +28,7 @@ In a large bowl, mix the cabbage, carrots, scallions ginger + garlic and salt + 
 <a href="E:\HTML Topics\Daily task html\Restuarent(day 2).html">Home/Go Back</a><br><br>
 
 
-<a href= "../Resume(Day 1).html">back folder </a> 
+<a href= "../Restuarent(day 2).html">back folder </a> 
 	<!--(here to folder up we have to use .. for folder up, for file up use-. only)-->
 </p>
 
