--- a/Restuarent(day 2).html
+++ b/Restuarent(day 2).html
@@ -9,11 +9,11 @@
 	
 	<br>
 	<h3>
-	<a href="E:\HTML Topics\Daily task html\Restaurant day 2 (src)\CFR.html">1. Chicken Fired rice 🍗</a> <br>
-	<a href="E:\HTML Topics\Daily task html\Restaurant day 2 (src)\MFR.html">2. Mutton Fired rice 🐐</a><br>
-	<a href="E:\HTML Topics\Daily task html\Restaurant day 2 (src)\Veg Man.html">3. Veg manchuria 🥬</a><br>
-	<a href="E:\HTML Topics\Daily task html\Restaurant day 2 (src)\Noodles.html">4. Noodles 🍜</a><br>
-	<a href="E:\HTML Topics\Daily task html\Restaurant day 2 (src)\jeera.html">5. Jeera Rice 🍚</a>
+	<a href="./Restaurant day 2 (src)/CFR.html">1. Chicken Fired rice 🍗</a> <br>
+	<a href="./Restaurant day 2 (src)/MFR.html">2. Mutton Fired rice 🐐</a><br>
+	<a href="./Restaurant day 2 (src)/Veg Man.html">3. Veg manchuria 🥬</a><br>
+	<a href="./Restaurant day 2 (src)/Noodles.html">4. Noodles 🍜</a><br>
+	<a href="./Restaurant day 2 (src)/jeera.html">5. Jeera Rice 🍚</a>
         
 	</h3>
 	
