--- a/day6_task.html
+++ b/day6_task.html
@@ -78,7 +78,7 @@
         
       }
      .bg {
-        background-image: url(../multimedia_folder/images/background.jpg);
+        background-image: url(./multimedia_folder/images/background.jpg);
         /* opacity: 10%; */
      } 
 
