--- a/index.html
+++ b/index.html
@@ -1,118 +1,50 @@
-<!doctype html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-	<title> Resume(day-1)</title>
-	<style> 
-	hr{border: 1.5px dotted;}
-	
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Index</title>
+	<style>
+		a {
+			font-size: 25px;
+			text-decoration: none;
+		}
+		ol {
+			font-size: 25px;
+		}
+		h1 {
+			color: red;
+		}
 	</style>
 </head>
 <body>
-       <h1 style="text-align:center; Height:90px; color:Red"><u>Resume</u>📄</h1>
-       
-        
-<p> 	
-	<h2 style="text-align:center; color:blue"><u>Sai Kiran Avusula</u> </h2>
-	<p style="text-align:center">
-	<b>📞+91 9703601833,  📧saikiranavusula89@gmail.com , 📍Hyderabad , 500032 </b> 
-	</p>
-			
-	<hr>
- 	
-	<h3 style="text-align:center; color:orange">🧑🏻‍💻<u>Front End Developer</u></h3>
-	<b>Position: </b>As a Front-End Developer, I specialize in creating user-friendly web 	interfaces. My role involves translating company and customer needs into functional and 	appealing interactive applications. <br> <br>
-	I hold a B.Tech degree in Computer Science and am passionate about creating functional 	and 	attractive digital environments that ensure a great user experience.
-	
-	<hr>
-	
-	<h3 style="text-align:center; color:green"> 📚<u>Key Compenents </u></h3>
-	<ul type=square>
-	<li>Proven work experience as a Front-End Developer.</li>
-	<li>Hands-on experience with markup languages (e.g., HTML).</li>
-	<li>Proficiency in JavaScript, CSS, and jQuery.</li>
-	<li>Familiarity with browser testing and debugging.</li>
-	<li>Understanding of layout aesthetics and SEO principles.</li>
-	<li>Knowledge of software like Adobe Suite, Photoshop, and content management systems.</li>
-	<li>Ability to perform well in a fast-paced environment.</li>
-	</ul>
-	<hr>
-	
-	<h3 style="text-align:center; color:orange">⚙️<u>Skills</u></h3>
-	<text>
-	<ul>
-	<li><b>Basic Design Principles:</b></li>
-	A grasp of design principles helps create visually appealing interfaces.
-	Learn about color theory, typography, and layout. Like HTML, CSS core concepts.
-	<br> <br>
-	<li><b> Cross-Browser Compatibility:</b></li>
-	Understand browser differences and ensure your code works well across various browsers 	(Chrome, Firefox, Safari, Edge).
-	<br><br>
-	<li><b>Performance Optimization:</b></li>
-	Learn techniques to improve website speed, such as lazy loading, image optimization, and code 	splitting.
-	<br><br>
-	<li><b>Browser Developer Tools:</b></li>
-	Master the use of browser dev tools for debugging, profiling, and optimizing your code.
-	</ul>
-	<ul>
-	<li> <b>Technical Exposure</b></li><br>
-		<ul> 
-			<li> <b>C Programming:</b> You delved into the fundamentals of C, 					understanding concepts like data types, loops, and functions.</li>
-			<li> <b>Java:</b> You explored object-oriented programming with Java, learning 				about classes, inheritance, and exception handling.</li>
-			<li> Web Development:<br>
-				<b>HTML and CSS:</b> You acquired the basics of web design, creating 				structured content with HTML and styling it using CSS.<br>
-				<b>JavaScript:</b> You dived into client-side scripting, enhancing web 				interactivity and responsiveness.</li>
-		</ul>
-		<br>
-	<li><b>Collebrative and Learning </b> </li><br>
-		<ul>
-			<li> Working closely with senior developers and team members was invaluable.
-			Participating in code reviews taught me best practices.
-			Contributing to real-world projects provided practical insights.</li>
-		</ul>		
-	
-	
-	</ul>
+	<div class="day1">
+		<h1>Day 1</h1>
+		<a href="./Resume(Day 1).html">Resume</a>
+	</div>
 
-	
-	<hr>
-	<h3 style="text-align:center; color:green">🧑🏻‍💻<u>Professinal Experience</u></h3>
-	<h4>Program Analyst Trainee - Internship(Cognizant Technologies Pvt. Ltd.) 
-	March 2022- November 2022 </h4> 
-	<text>
-	<ul>
-	<li>
-	My internship expanded my skill set beyond what textbooks could offer. I gained insights into 	agile methodologies, client interactions, and project planning. The exposure to real-world 	scenarios prepared me for future roles and instilled confidence in my abilities.	
-	</li>
-	</ul>
-	</text>
-	
-	
-	<text>
-	
-	</text>
-	
-	<hr>
-	
-	<h3 style="text-align:center; color:red"> 🎓<u>Education</u></h3>
-	
-	<ul>
-	<li><h4 >Bachelor of Technology (CSE) July 2018 - May 2022 </h4></li>
-	Graduated In Computer Science Engineering at Cmr Engineering 
-	College.
-	
-	<li><h4>Intermediate July 2016 - May 2018 </h4> </li>
-	Accomplished 12th Schooling in The Sri Gayatri Junior College, Hyd
-	<br>
-	</ul>
-
-        <hr>
-	<h3 style="text-align:center; color: blue">📑<u>Certificates </u></h3>
-	<ul>
-        <li><b>HTML-Front End Development- Great Learning </b></li> <br>
-	I have successfully completed the "Front End Development-HTML" course offered by Great 	Learning
-	</ul>
-	
-	<hr>				
-	</p>
-	
-<body/>
+	<div>
+		<h1>Day2</h1>
+		<a href="./Restuarent(day 2).html">Restuarent</a>
+	</div>
+	<div>
+		<h1>Day 3</h1>
+		<a href="./day3_task.html">The Restaurant Menu Using Image & anchor tag</a>
+	</div>
+	<div>
+		<h1>Day 4</h1>
+		<a href="./day4_task.html">Iframe tag function</a>
+	</div>
+	<div>
+		<h1>Day 5</h1>
+			<ol>
+				<li><a href="./day5_task1.html">Calculator UI using Table tags</a></li>
+				<li><a href="./day5_task2.html">Table Functions using imgs</a></li>
+			</ol>
+	</div>
+	<div class="Day 6">
+		<h1>Day 6</h1>
+		<a href="./day6_task.html">Registration Form</a>
+	</div>
+</body>
 </html>
