--- a/Restaurant day 2 (src)/MFR.html
+++ b/Restaurant day 2 (src)/MFR.html
@@ -34,7 +34,7 @@ step 2. Beat egg and water together in small bowl. Melt butter in a large skille
 step 3. Heat oil in the same skillet. Add onion; cook and stir until soft, about 3 minutes. Stir in rice, mutton, soy sauce, and pepper. Cook and stir for about 5 minutes; stir in shredded egg. Serve hot.
 </pre>
 
-<a href="E:\HTML Topics\Daily task html\Restuarent(day 2).html">Home/Go Back</a>
+<a href="../Restuarent(day 2).html">Home/Go Back</a>
 </p>
 
 </body>
