--- a/Restaurant day 2 (src)/Noodles.html
+++ b/Restaurant day 2 (src)/Noodles.html
@@ -23,7 +23,7 @@ Instant noodles of your choice I used top ramen curry
 3. Finally add in tastemaker and mix well.
 4. Serve.
 </pre>
-<a href="E:\HTML Topics\Daily task html\Restuarent(day 2).html">Home/Go Back</a>
+<a href="../Restuarent(day 2).html">Home/Go Back</a>
 </p>
 
 </body>
