--- a/Restaurant day 2 (src)/CFR.html
+++ b/Restaurant day 2 (src)/CFR.html
@@ -1,7 +1,9 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<title>Chicken Fired Rice</title>
-</head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Chicken Fried Rice</title>
 
 <body>
        <h2>Chicken Fired Rice</h2>
