--- a/Restaurant day 2 (src)/Noodles.html
+++ b/Restaurant day 2 (src)/Noodles.html
@@ -1,7 +1,9 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<title>Noodles</title>
-</head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Noodels</title>
 
 <body>
 
