--- a/Restaurant day 2 (src)/Veg Man.html
+++ b/Restaurant day 2 (src)/Veg Man.html
@@ -1,7 +1,9 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<title>Veg manchuria </title>
-</head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Veg Manchuria</title>
 
 <body>
 
