--- a/index.html
+++ b/index.html
@@ -1,50 +1,59 @@
+<!-- @format -->
+
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Index</title>
-	<style>
-		a {
-			font-size: 25px;
-			text-decoration: none;
-		}
-		ol {
-			font-size: 25px;
-		}
-		h1 {
-			color: red;
-		}
-	</style>
-</head>
-<body>
-	<div class="day1">
-		<h1>Day 1</h1>
-		<a href="./Resume(Day 1).html">Resume</a>
-	</div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Index</title>
+    <style>
+      a {
+        font-size: 25px;
+        text-decoration: none;
+      }
+      ol {
+        font-size: 25px;
+      }
+      h1 {
+        color: red;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="day1">
+      <h1>Day 1</h1>
+      <a href="./Resume(Day 1).html">Resume</a>
+    </div>
 
-	<div>
-		<h1>Day2</h1>
-		<a href="./Restuarent(day 2).html">Restuarent</a>
-	</div>
-	<div>
-		<h1>Day 3</h1>
-		<a href="./day3_task.html">The Restaurant Menu Using Image & anchor tag</a>
-	</div>
-	<div>
-		<h1>Day 4</h1>
-		<a href="./day4_task.html">Iframe tag function</a>
-	</div>
-	<div>
-		<h1>Day 5</h1>
-			<ol>
-				<li><a href="./day5_task1.html">Calculator UI using Table tags</a></li>
-				<li><a href="./day5_task2.html">Table Functions using imgs</a></li>
-			</ol>
-	</div>
-	<div class="Day 6">
-		<h1>Day 6</h1>
-		<a href="./day6_task.html">Registration Form</a>
-	</div>
-</body>
+    <div>
+      <h1>Day2</h1>
+      <a href="./Restuarent(day 2).html">Restuarent</a>
+    </div>
+    <div>
+      <h1>Day 3</h1>
+      <a href="./day3_task.html"
+        >The Restaurant Menu Using Image & anchor tag</a
+      >
+    </div>
+    <div>
+      <h1>Day 4</h1>
+      <a href="./day4_task.html">Iframe tag function</a>
+    </div>
+    <div>
+      <h1>Day 5</h1>
+      <ol>
+        <li><a href="./day5_task1.html">Calculator UI using Table tags</a></li>
+        <li><a href="./day5_task2.html">Table Functions using imgs</a></li>
+      </ol>
+    </div>
+    <div class="Day 6">
+      <h1>Day 6</h1>
+      <a href="./day6_task.html">Registration Form</a>
+    </div>
+
+    <div class="Day 6">
+      <h1>Day 7</h1>
+      <a href="./attribute-selectors.htm">Attribute selectors</a>
+    </div>
+  </body>
 </html>
